# tipdat_microbit

./: .gitignore  CMakeLists.txt  README.md
1_gpio/: Makefile  main.c
1_gpio/.build_system/: main.elf  main.hex
2_uart/: CMakeLists.txt  Makefile  gpio.c  gpio.h  main.c  uart.c  uart.h
3_gpiote/: Makefile  gpio.c  gpio.h  gpiote.c  gpiote.h  main.c  ppi.c  ppi.h
4_accelerometer/: Makefile  accel.c  gpio.c  main.c  twi.c  twi.h
4_twi/: accel.c  main.c  twi.c  twi.h
5_ble_gap/: bluetooth.c  main.c
